<resources>
    <string name="app_name">Biopédia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Biopédia - Seu app de catalogação da vida!</string>
    <string name="nav_header_subtitle">biopedialife.bio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_sair">action_sair</string>
    <string name="sair">Sair</string>
    <string name="e_mail">E-mail</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cadastre_aqui_seu_usuario">Cadastre aqui seu usuário</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="btn_cadastrar_user">Cadastrar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="cadastrar_animal">Cadastrar</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="outras_caracteristicas">Outras Características</string>
    <string name="conservacao">Conservação</string>
    <string name="estado_de_conservacao">Estado de Conservação</string>
    <string name="idade">Idade</string>
    <string name="reproducao">Reprodução</string>
    <string name="habitat">Habitat</string>
    <string name="sexo">Sexo</string>
    <string name="nome_ingles">Nome Inglês</string>
    <string name="nome_cientifico">Nome Científico</string>
    <string name="nome_comum">Nome Comum</string>
    <string name="subespecie">Subespécie</string>
    <string name="especie">Espécie</string>
    <string name="genero">Gênero</string>
    <string name="familia">Família</string>
    <string name="superfamilia">Superfamilia</string>
    <string name="ordem">Ordem</string>
    <string name="infraclasse">Infraclasse</string>
    <string name="classe">Classe</string>
    <string name="filo">Filo</string>
    <string name="vertebrados">Vertebrados</string>
    <string name="invertebrados">Invertebrados</string>
    <string name="sub_reinos">Sub Reinos</string>
    <string name="cadastre_aqui_o_seu_registo_animal">Cadastre aqui o seu registo animal!</string>
    <string name="title_activity_fragment_fauna">FragmentFauna</string>
    <string name="infraClasse">Infraclasse</string>
    <string name="title_menu">Biopédia - Seu app de catalogação da vida!</string>
    <string name="title_activity_datas_importantes">DatasImportantes</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="janeiro">Janeiro</string>
    <string name="dezembro">Dezembro</string>
    <string name="novembro">Novembro</string>
    <string name="outubro">Outubro</string>
    <string name="setembro">Setembro</string>
    <string name="agosto">Agosto</string>
    <string name="julho">Julho</string>
    <string name="junho">Junho</string>
    <string name="maio">Maio</string>
    <string name="abril">Abril</string>
    <string name="mar_o">Março</string>
    <string name="datas_importantes">Datas Importantes</string>
    <string name="datas_de_agosto">Datas de Agosto</string>
    <string name="_27_dia_da_limpeza_urbana">27 - Dia da Limpeza Urbana</string>
    <string name="datas_de_setembro">Datas de Setembro</string>
</resources>
