<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.DatasImportantes">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/datas_importantes">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/janeiro"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:text="@string/janeiro" />

            <android.support.design.widget.TabItem
                android:id="@+id/fevereiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fevereiro" />

            <android.support.design.widget.TabItem
                android:id="@+id/marco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mar_o" />

            <android.support.design.widget.TabItem
                android:id="@+id/abril"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abril" />
            <android.support.design.widget.TabItem
                android:id="@+id/maio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maio" />
            <android.support.design.widget.TabItem
                android:id="@+id/junho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/junho" />
            <android.support.design.widget.TabItem
                android:id="@+id/julho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/julho" />
            <android.support.design.widget.TabItem
                android:id="@+id/agosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agosto" />
            <android.support.design.widget.TabItem
                android:id="@+id/setembro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setembro" />
            <android.support.design.widget.TabItem
                android:id="@+id/outubro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outubro" />
            <android.support.design.widget.TabItem
                android:id="@+id/novembro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novembro" />
            <android.support.design.widget.TabItem
                android:id="@+id/dezembro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dezembro" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>