<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:orientation="vertical"
    android:background="@android:color/background_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/perfil"
                android:layout_width="128dp"
                android:layout_height="106dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/perfil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/cadastre_aqui_seu_usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/editCadNome"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:background="#F0FFF0"
                android:hint="@string/nome_completo"
                android:ems="10"
                android:inputType="textPersonName"
                tools:textAppearance="@style/TextAppearance.AppCompat" />

            <EditText
                android:id="@+id/editCadEmail"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="#F0FFF0"
                android:hint="@string/e_mail"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/editCadSenha"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="#F0FFF0"
                android:hint="@string/senha"
                android:ems="10"
                android:inputType="textPassword"
                tools:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/editCadConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="#F0FFF0"
                android:hint="@string/confirma_senha"
                android:ems="10"
                android:inputType="textPassword"
                tools:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/editCadDtNasc"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="#F0FFF0"
                android:ems="10"
                android:hint="@string/data_de_nascimento"
                android:inputType="text|datetime|date"
                tools:textAppearance="@style/TextAppearance.AppCompat" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="#F0FFF0"
                    android:checked="true"
                    android:text="@string/feminino" />

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="#F0FFF0"
                    android:checked="true"
                    android:text="@string/masculino" />

            </RadioGroup>

            <EditText
                android:id="@+id/editCadCidade"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:autoText="false"
                android:background="#F0FFF0"
                android:hint="@string/cidade"
                android:ems="10"
                android:inputType="textPostalAddress"
                tools:textAppearance="@style/TextAppearance.AppCompat" />

            <EditText
                android:id="@+id/editCadEstado"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="#F0FFF0"
                android:hint="@string/estado"
                android:ems="10"
                android:inputType="textPostalAddress"
                tools:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="#27d300"
                android:text="@string/btn_cadastrar_user"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>