<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context=".Activity.CadastroFauna">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/perfilCadFauna"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@mipmap/picbio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/cadastre_aqui_o_seu_registo_animal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:background="#F0FFF0"
                android:text="Reino Animalia ---> Animal (Animalle)"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="#f2f9f2"
                android:text="@string/sub_reinos"/>

            <RadioGroup
                android:id="@+id/rgReino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbInvertebrados"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/invertebrados" />

                <RadioButton
                    android:id="@+id/rbVertebrados"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vertebrados" />

            </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Filo (Metazoa)"
                    android:layout_marginLeft="15dp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                    android:textStyle="bold|italic"
                    android:background="#F0FFF0"
                    android:textSize="15sp"/>

            <EditText
                android:id="@+id/editFilo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/filo"
                android:inputType="" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/classe"
                    android:layout_marginLeft="15dp"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                    android:textStyle="bold|italic"
                    android:background="#F0FFF0"
                    android:textSize="15sp"/>

            <EditText
                android:id="@+id/editClasse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/classe"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/infraclasse"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editInfraclasse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/infraclasse"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ordem"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editOrdem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ordem"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/superfamilia"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editSuperfamilia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/superfamilia"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/familia"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editFamilia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/familia"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/genero"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editGenero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/genero"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/especie"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editEspecie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/especie"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/subespecie"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editSubespecie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/subespecie"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nome_comum"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editNomeComum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nome_comum"
                android:inputType="" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nome_cientifico"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editNomeCientifico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nome_cientifico"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nome_ingles"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editNomeIng"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nome_ingles"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sexo"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editSexoAnimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sexo"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/habitat"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editHabitat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/habitat"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reproducao"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editReproducao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/reproducao"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/idade"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editIdadeAnimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/idade"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/estado_de_conservacao"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editConservacao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/conservacao"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/outras_caracteristicas"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textStyle="bold|italic"
                android:background="#F0FFF0"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editCaracteristicas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/caracteristicas"
                android:inputType="" />

            <Button
                android:id="@+id/btnCadastrarFauna"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_animal"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:backgroundTint="#27d300"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVoltar1"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:backgroundTint="#27d300"
                android:text="@string/btn_voltar"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</TableLayout>